<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/registration_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="text"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/back" />

    </LinearLayout>

</LinearLayout>