<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/user_info_text_size"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/user_info_text_size"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/user_info_text_size"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin">

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/delete_account" />

    </LinearLayout>

</LinearLayout>